--- a/Tartarus-final/Tartarus-final/Views/Shared/_Layout.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Obavijest" asp-action="Index">Obavijest</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Obavijest" asp-action="Index">Announcements</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Poruka" asp-action="Index">Messages</a>
                         </li>
                     </ul>
                 </div>
