--- a/Tartarus-final/Tartarus-final/Views/Shared/_Layout.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Zahtjevi" asp-action="Index">Requests</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Obavijest" asp-action="Index">Announcements</a>
@@ -28,6 +28,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Poruka" asp-action="Index">Messages</a>
                         </li>
+                     
                     </ul>
                 </div>
             </div>
