--- a/Tartarus-final/Tartarus-final/Views/Shared/_Layout.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Database" asp-action="Index">Database</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="Index">Profile</a>
+                        </li>
 
                     </ul>
                 </div>
