--- a/Tartarus-final/Tartarus-final/Views/Shared/_LoginPartial.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
                 <form method="post" asp-controller="account" asp-action="logout">
                     <button type="submit" style="width:auto"
                             class="nav-link btn btn-link py-0">
-                        Logout @User.Identity.Name
+                        Logout @User.Identity.Name.ToLower()
                     </button>
                 </form>
             </li>
