--- a/Tartarus-final/Tartarus-final/Views/Cuvar/Index.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Cuvar/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/View/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Ovo je Cuvar</h1>
+<h1>Index</h1>
 
