--- a/Tartarus-final/Tartarus-final/Views/Shared/_Layout.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                 <partial name="_LoginPartial" />
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Zahtjevi" asp-action="Index">Requests</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Zahtjevi" asp-action="Index">Prisoners</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Obavijest" asp-action="Index">Announcements</a>
@@ -48,8 +48,8 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer class="border-top footer text-muted" style="background-color: #ffffff; height: 1vh">
+        <div class="container" style="font-family: 'Gill Sans'; text-align: center;">
             &copy; 2020 - Tartarus <a asp-area="" asp-controller="Home"></a>
         </div>
     </footer>
