Updated search form

--- a/Tartarus-final/Tartarus-final/Views/Shared/_Layout.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                 <partial name="_LoginPartial" />
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Zahtjevi" asp-action="Index">Prisoners</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Zatvorenici" asp-action="HomeSearchPrisoner">Prisoners</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Obavijest" asp-action="Index">Announcements</a>
