--- a/Tartarus-final/Tartarus-final/Views/Zatvorenici/Index.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Zatvorenici/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Tartarus_final.Models.Zatvorenik>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Search prisoners";
 }
 <h1>Index</h1>
 
