Updated announcements forms

--- a/Tartarus-final/Tartarus-final/Views/Shared/_Layout.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Zatvorenici" asp-action="HomeSearchPrisoner">Prisoners</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Obavijest" asp-action="Index">Announcements</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Obavijest" asp-action="HomeAnnouncements">Announcements</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Poruka" asp-action="Index">Messages</a>
