--- a/Tartarus-final/Tartarus-final/Views/Account/Register.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Account/Register.cshtml
@@ -12,41 +12,44 @@
             <div asp-validation-summary="All" class="text-danger"></div>
 
             <div class="form-group">
-                <label asp-for="FirstName"></label>
+                <label asp-for="FirstName" title="First name" style="text-align: center; background-color: #d3cccc; border-radius: 95px;"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="LastName"></label>
+                <label asp-for="LastName" title="Last name" style="text-align: center; background-color: #d3cccc; border-radius: 95px;"></label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
 
 
             <div class="form-group">
-                <label asp-for="Username"></label>
+                <label asp-for="Username" style="text-align: center; background-color: #d3cccc; border-radius: 95px;"></label>
                 <input asp-for="Username" class="form-control" />
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="Email"></label>
+                <label asp-for="Email" style="        text-align: center;
+        background-color: #d3cccc; border-radius: 95px;"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password"></label>
+                <label asp-for="Password" style="text-align: center; background-color: #d3cccc; border-radius: 95px;"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
+                <label asp-for="ConfirmPassword" title="Confirm password" style="        text-align: center;
+        background-color: #d3cccc; border-radius: 95px;
+        border-radius: 50px;"></label>
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Type"></label>
+                <label asp-for="Type" title="Type of user" style="text-align: center; background-color: #d3cccc; border-radius: 95px;"></label>
                 <input asp-for="Type" class="form-control" />
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
