--- a/Tartarus-final/Tartarus-final/Views/Zatvorenici/HomeSearchPrisoner.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Zatvorenici/HomeSearchPrisoner.cshtml
@@ -10,7 +10,7 @@
 <div class=" mb-lg-3"></div>
 
 <div class="d-flex justify-content-center">
-    <form asp-controller="Zatvorenici" asp-action="Index">
+    <form asp-controller="Zatvorenici" asp-action="HomeSearchPrisoner">
         <p style="font-size:large; align-items:center;">
             Enter prisoner name: <input type="text" name="SearchString" style="border-radius: 50px;  width: 80%; border: none;" />
             <input type="submit" value="Filter" style="border-radius: 50px; border: none;" />
