--- a/Tartarus-final/Tartarus-final/Views/Obavijest/Index.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Obavijest/Index.cshtml
@@ -1,40 +1,53 @@
 ﻿@model IEnumerable<Tartarus_final.Models.Obavijest>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "HomeAnnouncements";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Announcements</h1>
+
+<div class=" mb-lg-3"></div>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<div class=" mb-lg-3"></div>
+
 <!--Dont spam divs(Look up semantic code)-->
-<form asp-action="PretražiZatvorenike" method="post" >
-    <input type="text" name="searchNames" />
-    <input type="submit" value="Submit" />
+<form asp-action="PretražiZatvorenike" method="post">
+    <input type="text" name="searchNames" style="border-radius: 50px;  width: 80%; border-color: #d1d0d0;" />
+    <input type="submit" value="Search" style="border-radius: 50px; border: none;" />
 </form>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Tekst)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tekst)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+
+<div class=" mb-lg-5"></div>
+<div class="d-flex justify-content-center">
+    <table class="table d-flex justify-content-center" style="border-color: #d1d0d0">
+        <thead>
+            <tr>
+                <th style="text-align: center; background-color: #ffffff;">
+                    Text
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td style="text-align: center; background-color: #ffffff;">
+                        @Html.DisplayFor(modelItem => item.Tekst)
+                    </td>
+
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
