Updated search forms

--- a/Tartarus-final/Tartarus-final/Views/Zatvorenici/Index.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Zatvorenici/Index.cshtml
@@ -4,14 +4,13 @@
     ViewData["Title"] = "Search prisoners";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h1>Index</h1>
+    <h1>Search prisoners</h1>
+
+    <div class=" mb-lg-3"></div>
 
 <p style="font-size:large">
     <a asp-action="Create">Create New</a>
 </p>
-
-
-<h1>Search prisoners</h1>
 
 <div class=" mb-lg-3"></div>
 
