--- a/Tartarus-final/Tartarus-final/Views/Pravnik/Index.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Pravnik/Index.cshtml
@@ -4,5 +4,42 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
 
+<div class="d-flex justify-content-center">
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row no-gutters">
+            <div class="col-md-4">
+                <img src="~/img/Picture4.svg" class="card-img" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Prisoners</h5>
+                    <p class="card-text">Modify information about prisoners, their behavioral evaluation etc. Add or dismiss prisoners form correctional facility.</p>
+                    <p class="card-text">
+                        <button type="button" class="btn btn-secondary" onclick="location.href='@Url.Action("Index", "Zatvorenici")'">Take a look</button>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="d-flex justify-content-center">
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row no-gutters">
+            <div class="col-md-4">
+                <img src="~/img/Picture5.svg" class="card-img" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Announcements</h5>
+                    <p class="card-text">Add information about correctional facility working infrastructure.</p>
+                    <p class="card-text">
+                        <button type="button" class="btn btn-secondary" onclick="location.href='@Url.Action("Index", "Obavijest")'">Take a look</button>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
