--- a/Tartarus-final/Tartarus-final/Views/Account/Login.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Account/Login.cshtml
@@ -11,9 +11,9 @@
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="userName"></label>
-                <input asp-for="userName" class="form-control" />
-                <span asp-validation-for="userName" class="text-danger"></span>
+                <label asp-for="UserName" title="Username"></label>
+                <input asp-for="UserName" class="form-control" />
+                <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password"></label>
