--- a/Tartarus-final/Tartarus-final/Views/Poruka/Create.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Poruka/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+    <h1>Compose new</h1>
 
-<h4>Poruka</h4>
+<h4>Message</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
