--- a/Tartarus-final/Tartarus-final/Views/Obavijest/Index.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Obavijest/Index.cshtml
@@ -16,7 +16,7 @@
 <div class=" mb-lg-3"></div>
 
 <!--Dont spam divs(Look up semantic code)-->
-<form asp-action="PretražiZatvorenike" method="post">
+<form asp-action="Index" asp-controller="Obavijest">
     <input type="text" name="searchNames" style="border-radius: 50px;  width: 80%; border-color: #d1d0d0;" />
     <input type="submit" value="Search" style="border-radius: 50px; border: none;" />
 </form>
