Fixed Announcment search

--- a/Tartarus-final/Tartarus-final/Views/Obavijest/Index.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Obavijest/Index.cshtml
@@ -17,7 +17,7 @@
 
 <!--Dont spam divs(Look up semantic code)-->
 <form asp-action="Index" asp-controller="Obavijest">
-    <input type="text" name="searchNames" style="border-radius: 50px;  width: 80%; border-color: #d1d0d0;" />
+    <input type="text" name="SearchString" style="border-radius: 50px;  width: 80%; border-color: #d1d0d0;" />
     <input type="submit" value="Search" style="border-radius: 50px; border: none;" />
 </form>
 
