--- a/Tartarus-final/Tartarus-final/Views/Obavijest/HomeAnnouncements.cshtml
+++ b/Tartarus-final/Tartarus-final/Views/Obavijest/HomeAnnouncements.cshtml
@@ -11,7 +11,7 @@
 
 <!--Dont spam divs(Look up semantic code)-->
 <form  asp-controller="Obavijest" asp-action="HomeAnnouncements">
-    <input type="text" name="searchNames" style="border-radius: 50px;  width: 80%; border-color: #d1d0d0;" />
+    <input type="text" name="SearchString" style="border-radius: 50px;  width: 80%; border-color: #d1d0d0;" />
     <input type="submit" value="Search" style="border-radius: 50px; border: none;" />
 </form>
 
